classnames: negative margin on item-inputs caused very different behaviour on IE11 v. Chrome. fixed!

--- a/assets/less/creator.less
+++ b/assets/less/creator.less
@@ -1,9 +1,8 @@
 .item-inputs          {
 
-  left                :     0;
   position            :     relative;
   overflow            :     hidden;
-  margin-top: -10px;
+
 
   input[type="text"],
   input[type="url"],
